Send createPage message to server

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
     Make it easy to pick up where you left off. Jot down the state of your
     work and next steps.
   </p>
-  <button>Create your page</button>
+  <form action='/createPage' method='post'>
+    <button>Create your page</button>
+  </form>
   <h2>Example</h2>
 </body>
 </html>
