Pseudocode for create page API and get page API

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     Make it easy to pick up where you left off. Jot down the state of your
     work and next steps.
   </p>
-  <form action='/createPage' method='post'>
+  <form action='/create' method='post'>
     <button>Create your page</button>
   </form>
   <h2>Example</h2>
