--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,14 @@
 <body>
   <h1 class='page-title'>What was I working on?</h1>
   <div class='container'>
-    <p>
-      Make it easy to pick up where you left off. Jot down the state of your
-      work and next steps.
-    </p><br />
+    <p class='instructions'>
+      Make it easy to pick up where you left off.<br />
+      Jot down the state of your work and next steps.
+    </p><br /><br />
     <form id='create-page-form' action='/create' method='post'>
       <button id='create-page-button'>Create your page</button>
     </form>
   </div>
+  <footer>Copyright 2016 Andrew A. Liu</footer>
 </body>
 </html>
